syntax = "proto3";

package aleg.laptops;

// option go_package = ".;pb";
option go_package = "github.com/aleg/go-grpc-laptops/pb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
}
